# Gaia

./: .gitmodules  CMakeLists.txt  IRUniformsLocator.cpp  IRUniformsLocator.h  ImGuiTexture.cpp  ImGuiTexture.h  README.md  ResourceLimits.cpp  ResourceLimits.h  Texture2D.cpp  Texture2D.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanComputeImageTarget.cpp  VulkanComputeImageTarget.h  VulkanComputeRenderer.cpp  VulkanComputeRenderer.h  VulkanCore.cpp  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFragmentRenderer.cpp  VulkanFragmentRenderer.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanFrameBufferAttachment.cpp  VulkanFrameBufferAttachment.h  VulkanImGuiOverlay.cpp  VulkanImGuiOverlay.h  VulkanImGuiRenderer.cpp  VulkanImGuiRenderer.h  VulkanImage.cpp  VulkanImage.h  VulkanLogger.cpp  VulkanLogger.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShader.cpp  (+11 more)
cmake/: ctools.cmake  ezlibs.cmake  glfw.cmake  glslang.cmake  imguipack.cmake  spirv_headers.cmake  spirv_tools.cmake  vkheaders.cmake  vulkanheaders.cmake
include/Gaia/: gaia.h
include/Gaia/Buffer/: ComputeBuffer.h  FrameBuffer.h
include/Gaia/Core/: VulkanCommandBuffer.h  VulkanCore.h  VulkanDevice.h  VulkanSubmitter.h  VulkanSwapChain.h  vk_mem_alloc.h
include/Gaia/Gui/: ImGuiTexture.h  InAppGpuProfiler.h  VulkanImGuiRenderer.h  VulkanProfiler.h  VulkanWindow.h  imgui_impl_glfw.h
include/Gaia/Interfaces/: BufferObjectInterface.h  EffectInterface.h  FactoryInterface.h  GuiInterface.h  MergedInterface.h  MouseInterface.h  OutputSizeInterface.h  RendererInterface.h  ResizerInterface.h  ShaderInterface.h  StorageBufferInputInterface.h  StorageBufferOutputInterface.h  TaskInterface.h  TexelBufferInputInterface.h  TexelBufferOutputInterface.h  Texture2DInputInterface.h  Texture2DOutputInterface.h  Texture3DInputInterface.h  Texture3DOutputInterface.h  TextureCubeInputInterface.h  TextureCubeOutputInterface.h  iService.h  iSurface.h
include/Gaia/Rendering/: Base.h
include/Gaia/Rendering/Base/: BaseRenderer.h  ShaderPass.h
include/Gaia/Rendering/Passes/: EffectPass.h  MeshShaderPass.h  QuadShaderPass.h  VertexShaderPass.h
include/Gaia/Resources/: GpuOnlyStorageBuffer.h  StorageBufferStd430.h  Texture2D.h  Texture3D.h  TextureCube.h  UniformBlockStd140.h  VulkanComputeImageTarget.h  VulkanFrameBuffer.h  VulkanFrameBufferAttachment.h  VulkanRessource.h
include/Gaia/Shader/: IRUniformsLocator.h  ResourceLimits.h  VulkanShader.h
include/Gaia/Utils/: LoggingUtils.h  RenderDocApp.h  RenderDocController.h  uTypes.h
include/Gaia/Utils/Mesh/: MeshInfo.h  VertexStruct.h
src/: gaia.cpp
src/Buffer/: ComputeBuffer.cpp  FrameBuffer.cpp
src/Core/: VulkanCommandBuffer.cpp  VulkanCore.cpp  VulkanDevice.cpp  VulkanSubmitter.cpp  VulkanSwapChain.cpp
src/Gui/: ImGuiTexture.cpp  InAppGpuProfiler.cpp  VulkanImGuiRenderer.cpp  VulkanProfiler.cpp  VulkanWindow.cpp  imgui_impl_glfw.cpp
src/Rendering/Base/: BaseRenderer.cpp  ShaderPass.cpp
src/Rendering/Passes/: QuadShaderPass.cpp  VertexShaderPass.cpp
src/Resources/: GpuOnlyStorageBuffer.cpp  StorageBufferStd430.cpp  Texture2D.cpp  Texture3D.cpp  TextureCube.cpp  UniformBlockStd140.cpp  VulkanComputeImageTarget.cpp  VulkanFrameBuffer.cpp  VulkanFrameBufferAttachment.cpp  VulkanRessource.cpp
src/Shader/: IRUniformsLocator.cpp  ResourceLimits.cpp  VulkanShader.cpp
src/Utils/: LoggingUtils.cpp  RenderDocController.cpp  uTypes.cpp
src/Utils/Mesh/: VertexStruct.cpp
